# svt-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chef  Dockerfile.musl  README.md  commands.json  dev-install.sh  docker-compose.yml  install-dev.sh  install.sh  install_agent.sh  keypair.json  old.Dockerfile
.github/workflows/: audit.yml  clear.yml  deploy_page.yaml  general.yml  publish_page.yaml  publish_page_dev.yaml  release.yaml  release_dev.yaml  release_nightly.yaml  tag.yml  test.yml
ansible/inventory/: devnet.yaml
ansible/playbooks/: update.yaml
db/: db  snap.00000000000000FE
playbooks/: test.yml
src/: agent.rs  constants.rs  encryption.rs  listener.rs  main.rs  monitor.rs  notifier.rs  runner.rs  state.rs  task_runner.rs  utils.rs
src/messenger/: client.rs  encryption.rs  mod.rs  state.rs
src/utils/: convert.rs  converter.rs  docker.rs  messenger.rs  messenger_client.rs  mod.rs
