[package]
name = "svt-agent"
description = ""
version = "0.1.54"
authors = ["Vladyslav Korniienko <vk.tiamo@gmail.com>"]
repository = "https://github.com/mfactory-lab/svt-agent"
edition = "2021"

[dependencies]
anyhow = { version = "^1.0", default-features = false }
clap = { version = "^4.3", default-features = false, features = ["derive", "env", "std"] }
chrono = { version = "^0.4", default-features = false }
anchor-client = "^0.27.0"
anchor-lang = "^0.27.0"
hyper = { version = "0.14" }
tokio = "^1.22"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", default-features = false, features = ["env-filter"] }
tracing-tree = { version = "^0.2", default-features = false }
futures = { version = "0.3", default-features = false }
regex = { version = "^1.7", default-features = false }
sha2 = "^0.10"
chacha20poly1305 = { version = "0.9", default-features = false }
curve25519-dalek = { version = "^3.2", default-features = false }
x25519-dalek = "^1.2.0"
zeroize = "^1.3.0"
shiplift = { version = "0.7", default-features = false }
serde_json = { version = "^1.0.89", default-features = false }
sled = { version = "0.34.1", default-features = false }
rand = "0.7.3"
influxdb = { version = "0.6.0", default-features = false, features = ["hyper-client"] }

[dev-dependencies]
tracing-test = "0.2.3"

[profile.release]
#strip = true
incremental = true
codegen-units = 1
opt-level = 2
lto = "fat"
#panic = "abort"
#debug = false
